--- a/config.yml
+++ b/config.yml
@@ -8,13 +8,10 @@ workflows:
 jobs:
   build:
     docker:
-      - image: cimg/base:2021.11
-        auth:
-          username: mydockerhub-user
-          password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
+      - image: cimg/base:2020.01
     steps:
       - checkout
       - run:
-          name: "Omar"
+          name: "echo an env var that is part of our project"
           command: |
-            echo $EGP # this env var must be set within the project
+            echo $MY_ENV_VAR
