--- a/.circaleci/config.yml
+++ b/.circaleci/config.yml
@@ -3,15 +3,19 @@ version: 2.1
 workflows:
   test-env-vars:
     jobs:
-      - build
+      - build:
+          context: my_context_name # has an env var called MY_ENV_VAR
 
 jobs:
   build:
     docker:
-      - image: cimg/base:2020.01
+      - image: cimg/base:2021.11
+        auth:
+          username: mydockerhub-user
+          password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
     steps:
       - checkout
       - run:
-          name: "echo an env var that is part of our project"
+          name: "echo an env var that is part of our context"
           command: |
             echo $MY_ENV_VAR
