--- a/.circaleci/config.yml
+++ b/.circaleci/config.yml
@@ -1,20 +1,9 @@
+# CircleCI configuration file
 version: 2.1
-
-workflows:
-  test-env-vars:
-    jobs:
-      - build
 
 jobs:
   build:
     docker:
-      - image: cimg/base:2021.11
-        auth:
-          username: mydockerhub-user
-          password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
+     - image: cimg/base:2022.05
     steps:
-      - checkout
-      - run:
-          name: "echo an env var that is part of our project"
-          command: |
-            echo $MY_ENV_VAR # this env var must be set within the project
+        - run: echo "Say hello to YAML!"
