--- a/.circaleci/config.yml
+++ b/.circaleci/config.yml
@@ -4,6 +4,6 @@ version: 2.1
 jobs:
   build:
     docker:
-     - image: cimg/base:2022.05
+     - image: cimg/base:stable
     steps:
         - run: echo "Say hello to YAML!"
