--- a/.circaleci/config.yml
+++ b/.circaleci/config.yml
@@ -1,9 +1,28 @@
-# CircleCI configuration file
+# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-
+# Use a package of configuration called an orb.
+orbs:
+  # Declare a dependency on the welcome-orb
+  welcome: circleci/welcome-orb@0.4.1
+# Orchestrate or schedule a set of jobs
 jobs:
-  build:
+  print_hello:
     docker:
-     - image: cimg/base:stable
+      - image: circleci/node:13.8.0
     steps:
-        - run: echo "Say hello to YAML!"
+      - run: echo hello
+  print_world:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - run: echo world
+workflows:
+  # Name the workflow "welcome"
+  welcome:
+    # Run the welcome/run job in its own container
+    jobs:
+      - welcome/run
+      - print_hello
+      - print_world:
+          requires:
+            - print_hello
