--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,9 +62,9 @@ jobs:
             # Test if website exists
             if curl -s --head ${URL} 
             then
-              return 0
+              echo "It Worked"
             else
-              return 1
+              echo "It Failed"
             fi     
 
 # Name the workflow "welcome"
