--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,10 +64,11 @@ commands:
       - image: alpine:latest
     steps:
       - run:
-          name: Test job
+          name: smok test
           # Fail the job intentionally to simulate an error.
           command:  return 1
       - destroy_environment
+        when: on_fail
         
 
 # Name the workflow "welcome"
