--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,7 @@ jobs:
                 --template-file template.yml \
                 --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
                 --region us-east-1
-        - run: return 1
+        #- run: return 1
         - destroy_environment
 
   # Exercise: Config and Deployment
@@ -72,7 +72,7 @@ jobs:
       - run:
           name: smoke test
           command: |
-            URL="https://blog.udacity.com/"
+            URL="https://blog.udacity123.com/"
             # Test if website exists
             if curl -s --head ${URL} 
             then
