--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,9 +66,8 @@ jobs:
   # Exercise: Smoke Testing
   smoke_test:
     docker:
-      - image: alpine:latest
+      - image: amazon/aws-cli
     steps:
-      - run: apk add --update curl
       - run:
           name: smoke test
           command: |
