--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,7 @@ jobs:
                 --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
                 --region us-east-1
         #- run: return 1
-        - destroy_environment
+        #- destroy_environment
 
   # Exercise: Config and Deployment
   configure_infrastructure: 
