--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,6 +68,7 @@ jobs:
     docker:
       - image: amazon/aws-cli
     steps:
+      - run: apk add --update curl
       - run:
           name: smoke test
           command: |
