--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,7 +91,7 @@ jobs:
             --stack-name stack-create-bucket-${CIRCLE_WORKFLOW_ID:0:7} \
             --parameter-overrides MyBucketName="mybucket-${CIRCLE_WORKFLOW_ID:0:7}"
       # Uncomment the step below if yoou wish to upload all contents of the current directory to the S3 bucket
-      - run: aws s3 sync . s3://mybucket-${CIRCLE_WORKFLOW_ID:0:7} --delete
+      #- run: aws s3 sync . s3://mybucket-${CIRCLE_WORKFLOW_ID:0:7} --delete
   
   # Exercise: Promote to Production - Job 2
   # Fetch and save the pipeline ID (bucket ID) responsible for the last release.
@@ -151,16 +151,17 @@ jobs:
 
 workflows:
   # Name the workflow "welcome"
+  my_workflow:
   # Run the welcome/run job in its own container
-  jobs:
-    - create_infrastructure
-    - configure_infrastructure
-    - create_and_deploy_front_end
-    - promote_to_production:
-        requires: 
-    - create_and_deploy_front_end
-    - get_last_deployment_id
-    - clean_up_old_front_end:
-        requires:
-          - get_last_deployment_id
-          - promote_to_production
+    jobs:
+      - create_infrastructure
+      - configure_infrastructure
+      - create_and_deploy_front_end
+      - promote_to_production:
+          requires: 
+      - create_and_deploy_front_end
+      - get_last_deployment_id
+      - clean_up_old_front_end:
+          requires:
+            - get_last_deployment_id
+            - promote_to_production
